--- a/index.htm
+++ b/index.htm
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head><title>Chat Room</title>
-	<style type="text/css">
+<style type="text/css">
 	html, body{width: 100%; height: 100%;}
-
-	</style>
-<script type="text/javascript" src="lib/jquery-1.10.1.min.js"></script>
+</style>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
 <body>
 
 
-<script type="text/javascript" src="lib/chatJS.js"></script>
+<script type="text/javascript">
+var chatJS= {
+
+insert: function(contextElem){
+
+	var txt = document.createElement('textarea');
+	txt.style.width = '100%';
+	txt.style.height = '75%';
+
+	var tb = document.createElement('input');
+	tb.setAttribute('type', 'text');
+	tb.style.width = '80%';
+	tb.style.height = '20%';
+	tb.style.verticalAlign = 'top';
+
+	var bt = document.createElement('button');
+	bt.innerHTML = 'SEND';
+	bt.style.width = '19%';
+	bt.style.height = '20%';
+
+	contextElem.appendChild(txt);
+	contextElem.appendChild(tb);
+	contextElem.appendChild(bt);
+},
+
+
+send: function(){
+	$.post('server.js', {message : $('$el').val()}).done(this.receive);
+},
+
+receive: function(data){
+	console.log(data);
+}
+};
+chatJS.insert(document.getElementsByTagName('body')[0]);
+
+</script>
 </body>
 </html>
