--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head><title>Chat Room</title>
 <style type="text/css">
 	html, body{width: 100%; height: 100%;}
-	.message{display: block; background-color: gray;}
+	.message{display: block; background-color: #E6E6FA;}
 </style>
 <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>-->
 <script type="text/javascript" src="http://localhost/MemoryGamma/lib/jquery-1.8.2.min.js"></script>
